# ServerOxide

./: Cargo.toml  README.md
dev-tools/: manual_dev_test.sh
settings/: dev.toml
src/: lib.rs  main.rs
src/api/v1/: error.rs  handler.rs  mod.rs  router.rs
src/auth/: auth.rs  fake_auth.rs  mod.rs
src/captcha/: captcha.rs  fake_captcha.rs  mod.rs
src/chat/: chat.rs  fake_chat.rs  message.rs  mod.rs
src/domain/: chat.rs  mod.rs  user.rs
src/logger/: logger.rs  mod.rs
src/server/: server.rs
src/settings/: cli.rs  mod.rs  settings.rs
src/user/: fake_user.rs  mod.rs  user.rs
